# FocusMath

./: README.md  StepPyStep.py  buildozer.spec  curdir.tmp  image_utils.py  main.kv  main.py  settings.ini  theme.py
Mathpix/: mathpix.c  mathpix.pyx  setup.py
TextRenderer/: CMakeLists.txt  Character.cpp  Character.hpp  EquationParts.cpp  EquationParts.hpp  Exceptions.cpp  Exceptions.hpp  ImgBufDyn.cpp  ImgBufDyn.hpp  Renderer.cpp  Renderer.hpp  dllmake.txt  imgdyntopng.hpp  implementation.hpp  main.cpp  parsers.hpp  readme.txt  test.py
TextRenderer/resources/images/: output2,png
TextRenderer/resources/include/freetype/config/: ftconfig.h  ftoption.h
